@@ -47,9 +47,10 @@ import ch.ethz.idsc.tensor.io.TensorProperties;
     this.object = object;
     try {
       // TODO JPH use proper default constructor
-      reference = object.getClass().newInstance();
+      reference = object.getClass().getDeclaredConstructor().newInstance();
     } catch (Exception exception) {
       reference = null;
+      System.out.println(object.getClass().getSimpleName());
       exception.printStackTrace();
     }
     {
